UI Fix: Home page pagination CSS alignment fixed.

--- a/_sass/layouts/home.scss
+++ b/_sass/layouts/home.scss
@@ -1,22 +1,39 @@
 .home {
+  display: flex;
   padding: 2rem 1.5rem;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  grid-template-areas: "card card";
-  grid-auto-columns: 1fr 1fr;
-  row-gap: 15px;
-  column-gap: 15px;
+  flex-direction: column;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 20px;
+
+  .home-posts {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-areas: "card card";
+    grid-auto-columns: 1fr 1fr;
+    gap: 20px;
+  }
 }
 @media only screen and (max-width: 700px) {
   .home {
     display: flex;
+    padding: 1.5rem 1rem;
     flex-direction: column;
-    row-gap: 1.5rem;
-    padding: 2rem 1rem;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: stretch;
+    gap: 15px;
+
+    .home-posts {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
